Marcha na Próxima Aula

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -7,15 +7,29 @@
     <style>
         body {
             height: 100vh;
-            background-color: black;
+         /*  background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-size: cover;
             background-position: center center;
             background-repeat: no-repeat;
+            background-attachment: fixed; */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
+   
+        /* shorthand-background
+        color > image > position > repet > [size] > attachmant
+         */
+        
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat cover fixed;
+
+
         }
+        
+
         main {
             background-color: white;
-            width: 300px;
+            max-width: 450px;
             padding: 10px;
             margin: auto;
             border: 2px solid darkblue;
@@ -28,6 +42,8 @@
     <main>
         <h1>Teste de Imagens de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis reprehenderit voluptas in, nemo quas sint assumenda unde veritatis voluptatem iure debitis iste quaerat ullam vel officiis at nesciunt. Animi, sint. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias inventore velit nulla, adipisci possimus eaque explicabo nostrum placeat. Expedita accusamus, veniam quam possimus in ullam libero tenetur enim laborum iusto. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, minima aperiam? Sed ratione maiores enim aliquam delectus cum. Quisquam voluptatibus amet totam numquam praesentium assumenda laudantium pariatur reprehenderit! Ut, nulla.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In doloribus iusto fugit molestias et quisquam iure nesciunt at maiores saepe. Totam ab ducimus tempore veritatis ex magnam maiores provident repellendus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde aliquam, consectetur in perferendis quis natus dicta debitis necessitatibus veniam? Aliquam pariatur nobis molestias, consectetur unde rerum nostrum. Mollitia, in ea? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur in ducimus enim. Rem numquam consectetur earum exercitationem impedit! Adipisci debitis illo doloribus accusantium, reiciendis inventore veritatis consequuntur dolor possimus magni.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam minus sequi repellendus, obcaecati ab eum labore ut dolorem modi unde nam impedit. Rerum nihil molestiae earum excepturi consequatur? Possimus, obcaecati?Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eveniet omnis natus eligendi! Molestias minima fugiat, soluta in omnis quisquam porro! Nam cumque totam sint itaque necessitatibus, laborum tenetur officiis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab iste impedit placeat eum eius commodi molestiae corrupti optio, nisi aliquam nulla rerum consequuntur assumenda, officia perferendis adipisci distinctio consequatur a?</p>
     </main>
 </body>
 </html>
