--- a/desafio/ex014.html
+++ b/desafio/ex014.html
@@ -5,88 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio</title>
     <style>
-        table {
+     table {
             border-collapse: collapse;
-            width: 400px;
-        }
-        caption {
-            font-size: 1.3em;
-            font-weight: bolder;
-            padding-bottom: 5px;
         }
         th, td {
             border: 1px solid black;
-            padding: 10px;
+            padding: 8px;
         }
-        thead, tfoot {
-            background-color: gray;
+        .centro {
+            text-align: center;
+        }
+
+        .esquerda {
+            text-align: left;
+        }
+
+        .inverso {
+            background-color: #7e7e7e;
             color: white;
         }
-        tfoot  {
-            text-align: left;
+
+        .realce {
+            font-weight: bolder;
         }
     </style>
 </head>
 <body>
-   
     <table>
-        <caption>Desafio 014</caption>
-        <thead>
-                <th>Área</th>
-                <th>Disciplinas</th>
-                <th colspan="2">Notas</th>
-                <th>Média</th>
-            
-        </thead>
-        <tbody>
-            <tr>
-                <th rowspan="4">Exatas</th>
-                <td>Matemática</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Física</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Química</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Biologia</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <th colspan="4">Média de Exatas</th>
-            <td>0.0</td>
-        </tfoot>
-        <tbody>
-            <tr>
-                <th rowspan="2">Humanas</th>
-                <td>Historia</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Geografia</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-        </tbody>
-        <tfoot>
-
-        </tfoot>
-    </table>
+        <tr class="inverso">
+            <th rowspan="2" scope="col">Área</th>
+            <th rowspan="2" scope="col">Disciplinas</th>
+            <th colspan="2" scope="colgroup">Notas</th>
+            <th rowspan="2" scope="col">Média</th>
+        </tr>
+        <tr class="inverso">
+            <th scope="col">Nota 1</th>
+            <th scope="col">Nota 2</th>
+        </tr>
+        <tr>
+            <th rowspan="4" scope="rowgroup">Exatas</th>
+            <td>Matemática</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+        </tr>
+        <tr>
+            <td>Física</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+        </tr>
+        <tr>
+            <td>Química</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+        </tr>
+        <tr>
+            <td>Biologia</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+        </tr>
+        <tr class="inverso">
+            <th colspan="4" scope="row" class="esquerda">Média de Exatas</th>
+            <td class="centro realce">0.0</td>
+        </tr>
+        <tr>
+            <th rowspan="2" scope="rowgroup">Humanas</th>
+            <td>História</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+        </tr>
+        <tr>
+            <td>Geografia</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+            <td class="centro">0.0</td>
+        </tr>
+        <tr class="inverso">
+            <th colspan="4" scope="rowgroup" class="esquerda">Média de Humanas</th>
+            <td class="centro realce">0.0</td>
+        </tr>
+    </table>  
 </body>
 </html>
