--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando media Queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="versão para celular">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="versão para tablet">
+        <img id="print" src="imagens/icon-print.png" alt="versão para impressão">
+        <img id="pc" src="imagens/icon-pc.png" alt="versão para dasktop">
+        <img id="tv" src="imagens/icon-tv.png" alt="versão para TV">
+    </main>
 </body>
 </html>
